--- a/src/components/dashboard/dashboard.component.html
+++ b/src/components/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<div>
+    <h2>Dashboard</h2>
+    <app-transactions></app-transactions>
+    <h3>Transações</h3>
+    <ul>
+        <li *ngFor="let transaction of transactions">
+            {{transaction.description}} - {{transaction.amount}} {{transaction.type}}
+        </li>
+    </ul>
+</div>
