--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<div>
+    <h2>Login</h2>
+    <form (ngSubmit)="login()">
+        <input type="email" [(ngModel)]="email" name="email" placeholder="Email" required>
+        <input type="password" [(ngModel)]="password" name="password" placeholder="Senha" required>
+        <button type="submit">Login</button>
+    </form>
+</div>
