--- a/src/components/register/register.component.html
+++ b/src/components/register/register.component.html
@@ -1,1 +1,9 @@
-<p>register works!</p>
+<div>
+    <h2>Register</h2>
+    <form (ngSubmit)="register()">
+        <input type="text" [(ngModel)]="name" name="name" placeholder="Nome" required>
+        <input type="email" [(ngModel)]="email" name="email" placeholder="Email" required>
+        <input type="password" [(ngModel)]="password" name="password" placeholder="Senha" required>
+        <button type="submit">Registrar</button>
+    </form>
+</div>
